<resources>
    <string name="open_source_licenses">Open Source licenses</string>
    <string name="about">About</string>
    <string name="blank" />

    <string-array name="about_list_options">
        <item>Privacy Policy</item>
        <item>Terms and Conditions</item>
        <item>Open Source License</item>
        <item>About</item>
    </string-array>

    <string name="user_no_repos">User does not have any repos.</string>
    <string name="loading_repos">Loading repos…</string>
    <string name="fetching_new_data">Fetching new data…</string>
    <string name="error">Error</string>
    <string name="no_internet_connection_error_message">You do not have an Internet connection. Connect, then try again.</string>
    <string name="server_down_error_message">Sorry! There was an issue. The team has been notified. Please try again later.</string>
    <string name="error_500_600_response_code">Sorry! Our system is currently not working. Come back in a few minutes and try again.</string>
    <string name="error_network_connection_issue">There is an issue with your Internet connection. Try again soon.</string>
    <string name="unhandled_http_response_error_message">Sorry! There was an issue. The team has been notified. Please try again later.</string>
    <string name="unauthorized_relogin">Sorry, you have been logged out. Please login again and try again.</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="enable_analytics">Enable analytics</string>
    <string name="analytics_settings_page_summary">Allow app to collect my basic activity to help improve the app.</string>
    <string name="log_out">Log out</string>
    <string name="fatal_network_error_message">Sorry! There was an error. The team has been notified to fix it. Try again in a day or two.</string>
    <string name="exchange_passwordless_token_auth_token_loading_message">Finishing logging you in.\nIt shouldn\'t take too long…</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="done">Done</string>
    <string name="login_message">Enter your email address below to begin.</string>
    <string name="welcome">Welcome!</string>
    <string name="email_sent">Email sent</string>
    <string name="check_email_to_finish_login">Check your email to finish the login process.</string>
    <string name="ok">OK</string>
    <string name="logging_out">Logging out of your account…</string>
    <string name="error_401_response_code">Sorry! You must log out, login to your account, and try again.</string>
    <string name="sure_logout">Are you sure you want to log out?</string>
    <string name="sure_logout_message">Are you sure you want to log out of your %s account? If yes, the data for the %s account will be deleted from the device and you will be prompted to login to another account.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_dialog_message">You have changes in the app that have not synced yet. You will lose your changes if you log out now.</string>
    <string name="are_you_sure_data_safe_dialog_message">All of your data has been synced. You are now safe to log out.</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_syncing_changes_now">Syncing changes now…</string>
    <string name="are_you_sure_no_network_connection">You have changes in the app that have not been synced yet. We tried to sync them automatically for you, but you are not connected to the Internet. Connect, then try again.</string>
    <string name="are_you_sure_finished_sync_errors_message">We tried to sync all of your changes, but there were some errors that need resolved. Check for errors in the app and try again.</string>
    <string name="log_out_anyway">Log out anyway?</string>
    <string name="are_you_sure_log_out">Are you sure you want to log out?</string>
    <string name="warning">Warning</string>
    <string name="unlock">Unlock</string>
    <string name="want_to_login_to_a_different_account">Want to login to a different account?</string>
    <string name="unlock_account_message">We see you were previously logged into your account: %s.\n\nUnlock your account to get back to what you were doing or log into a new account.</string>
    <string name="sending_you_an_email">Sending you an email…</string>
    <string name="error_rate_limiting_response">Sorry! You need to take a little break. Wait a minute, then try again.</string>
    <string name="repos_last_updated">Repos last updated %s ago</string>
    <string name="username_too_long">Username is %s too long.</string>
    <string name="username_too_short">Username is %s too short.</string>
    <string name="licenses">Licenses</string>
    <string name="logging_into_app_title">Logging into account...</string>
    <string name="repos">Repos</string>
</resources>
