<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_lighter">

    <com.levibostian.swapper.SwapperView
        android:id="@+id/act_passwordless_login_swapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.levibostian.pleasehold.PleaseHoldView
            android:id="@+id/act_passwordless_login_loadingview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:pleasehold_message_text="@string/sending_you_an_email"/>

        <LinearLayout
            android:id="@+id/act_passwordless_login_loginview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_message"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:paddingBottom="26dp"/>

            <EditText
                android:id="@+id/act_passwordless_login_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:importantForAutofill="yes"/>

            <Button
                android:id="@+id/act_passwordless_login_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/done"/>
        </LinearLayout>
    </com.levibostian.swapper.SwapperView>
</LinearLayout>