<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_lighter">

    <com.levibostian.swapper.SwapperView
        android:id="@+id/act_unlock_account_swapper_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.levibostian.pleasehold.PleaseHoldView
            android:id="@+id/act_unlock_account_loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:pleasehold_message_text="@string/sending_you_an_email"/>

        <LinearLayout
            android:id="@+id/act_unlock_account_login_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/act_unlock_account_message_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_account_message"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:paddingBottom="26dp"/>

            <TextView
                android:id="@+id/act_unlock_account_email_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:gravity="center"
                tools:text="email: you@example.com"/>

            <Button
                android:id="@+id/act_unlock_account_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/unlock"/>

            <LinearLayout
                android:id="@+id/act_unlock_account_logout_anyway_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="38dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/want_to_login_to_a_different_account"/>

                <Button
                    android:id="@+id/act_unlock_account_logout_anyway_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/log_out"/>
            </LinearLayout>
        </LinearLayout>
    </com.levibostian.swapper.SwapperView>
</LinearLayout>