<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_lighter">

    <com.levibostian.loadingemptyviews.widgets.LoadingView
        android:id="@+id/auth_activity_loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone"/>

    <LinearLayout
        android:id="@+id/auth_activity_login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:paddingBottom="26dp"/>

        <EditText
            android:id="@+id/auth_activity_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:importantForAutofill="yes"/>

        <Button
            android:id="@+id/auth_activity_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/done"/>
    </LinearLayout>

</LinearLayout>